feat: new booking flow base
